# demo-FastAPI

./: .pre-commit-config.yaml  Dockerfile  Dockerfile.database  Makefile  README.md  compose.yaml  configure-db.sh  make_database.sql  pyproject.toml
.github/workflows/: ruff-at-pr.yml
demo_fastapi/: connection_manager.py  demo.py  demo2.py  demo3.py  main.py  model.py  odbc_execute.py  sales.py  sql_server.py  utils.py
tests/: conftest.py  test_app_lifespan.py  test_main.py  test_model.py  test_odbc_execute.py  test_sales.py  test_sqlserver.py
