[tool.poetry]
name = "demo-fastapi"
version = "0.1.0"
license = "MIT"
description = "Demo to practice making packages with poetry, git hooks and FastAPI"
authors = ["Ana <ana@xal.no>"]
readme = "README.md"
packages = [{include = "demo_fastapi"}]  # specify your package and its location to include

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"
numpy = "^1.25.2"  # ^ equiv (>=v.wy.z, <v+1.0.0)
httpx = "^0.24.1"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pytest = "^7.4.1"
pyodbc = "^4.0.39"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.287"
ipython = "^8.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
